Changes in multiple files to fix like, unlike issues. AIService check. Added Global Exception and unit, integration tests.