@@ -3,9 +3,11 @@ package com.example.techblog.config;
 import com.example.techblog.security.JwtFilter;
 import com.example.techblog.security.UserDetailsServiceImpl;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.context.annotation.*;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.*;
@@ -29,37 +31,42 @@ public class SecurityConfig {
     }
 
     @Bean
+    
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-    	 return http
-    			 	.cors().configurationSource(corsConfigurationSource()) // ✅ Add this line
-    	            .and()
-    		        .csrf(csrf -> csrf
-    		            .ignoringRequestMatchers("/h2-console/**") // Disable CSRF for H2 console only
-    		            .disable()
-    		        )
-    		        .headers(headers -> headers
-    		            .frameOptions(frame -> frame.sameOrigin()) // Allow embedded H2 console frames
-    		        )
-    		        .sessionManagement(sm -> sm
-    		            .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-    		        )
-    		        .authorizeHttpRequests(auth -> auth
-    		            .requestMatchers("/auth/**", "/h2-console/**", "/auth/**", "/blogs/**").permitAll() // Allow auth & H2 console
-    		            .anyRequest().authenticated()
-    		        )
-    		        .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
-    		        .build();
+        return http
+            .cors().configurationSource(corsConfigurationSource())
+            .and()
+            .csrf(csrf -> csrf
+                .ignoringRequestMatchers("/h2-console/**")
+                .disable()
+            )
+            .headers(headers -> headers
+                .frameOptions(frame -> frame.sameOrigin())
+            )
+            .sessionManagement(sm -> sm
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            )
+            .authorizeHttpRequests(auth -> auth
+            	    .requestMatchers("/auth/**", "/h2-console/**").permitAll()
+            	    .requestMatchers(HttpMethod.GET, "/blogs/**").permitAll()
+            	    .requestMatchers(HttpMethod.GET, "/api/posts/*/comments").permitAll() // ✅ allow public comments GET
+            	    .requestMatchers(HttpMethod.POST, "/api/posts/{id}/likes").authenticated()
+            	    .requestMatchers(HttpMethod.DELETE, "/api/posts/{id}/likes").authenticated()
+            	    .anyRequest().authenticated()
+            	)
+            .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
+            .build();
     }
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000")); // React app origin
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true); // Only use if sending cookies or Authorization headers
-
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
     @Bean
